--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
     <div id="overlay" class="overlay" style="display:none;">
       <div class="loading">Loading...</div>
     </div>
-    <div class="container py-5">
-      <div class="row py-5">
+    <div class="container">
+      <div class="row">
         <div class="col d-flex justify-content-center">
           <div>
             <div id="content">
