--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -8,28 +8,17 @@
       <div class="mb-3">
         <label for="attendanceMonth" class="form-label">Select Month</label>
         <select id="attendanceMonth" class="form-select">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-          <option value="11">11</option>
-          <option value="12">12</option>
+          {% for month in months %}
+          <option value="{{ month }}">{{ month }}</option>
+          {% endfor %}
         </select>
       </div>
       <div class="mb-3">
         <label for="attendanceYear" class="form-label">Select Year</label>
         <select id="attendanceYear" class="form-select">
-          <option value="2023">2023</option>
-          <option value="2024">2024</option>
-          <option value="2025">2025</option>
-          <option value="2026">2026</option>
-          <option value="2027">2027</option>
+          {% for year in years %}
+          <option value="{{ year }}">{{ year }}</option>
+          {% endfor %}
         </select>
       </div>
       <button class="btn btn-outline-success" type="button" onclick="postAttendanceData()">predict</button>
