--- a/templates/income.html
+++ b/templates/income.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="form w-100" id="formPredictIncome" >
-  <h2>Predict Income</h2>
+  <h2>Predict Financial Income</h2>
   <form>
     <fieldset>
       <div class="mb-3">
